--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+.course-card img
+{
+    border-radius: 4px;
+    margin-top: 10px;
+}
+
+button
+{
+    margin-top: 20px;
+    height: 40px;
+    font-size: 20px;
+    background: #1a7ce7;
+    color: white;
+    border-radius: 4px;
+}
+
+course-card.is-first
+{
+    border-top: 2px solid black;
+    padding-top: 20px;
+}
+
+course-card.is-last
+{
+    border-bottom: 2px solid black; 
+    padding-top: 20px;
+}
+
+course-card.is-even
+{
+    background-color:lightgray;
+}
+
+course-card.is-odd
+{
+    background: lightcyan;
+}
