--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,9 @@
     <app-coursecard [course1]="courseAll" [indexOne]="index" [class.is-first]="first" [class.is-last]="last" [class.is-even]="even" [class.is-odd]="odd"></app-coursecard>       
   }
   
-<h1>Courses</h1> 
+<h1>Courses</h1>
+<h1>Courses2</h1> 
+
   @empty()
   {
     <h1>No Courses Found</h1> 
